fix(7days): made plans more distinct.